[package]
name = "day6"
version = "0.1.0"
authors = ["Alex Eyler <alex.eyler@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
clap = "2.34.0"
colored = "2"
rayon = "1.5.1"